--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,6 +21,35 @@
 #     - name: Analysing the code with pylint
 #       run: |
 #         pylint $(git ls-files '*.py')
+# name: Python Lint
+
+# on:
+#   push:
+#     branches: [main]
+#   pull_request:
+#     branches: [main]
+
+# jobs:
+#   lint:
+#     runs-on: ubuntu-latest
+    
+#     steps:
+#     - uses: actions/checkout@v3
+    
+#     - name: Set up Python
+#       uses: actions/setup-python@v4
+#       with:
+#         python-version: '3.10'
+        
+#     - name: Install dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install pylint
+        
+#     - name: Lint with pylint
+#       run: |
+#         pylint fib.py
+
 name: Python Lint
 
 on:
@@ -48,4 +77,4 @@ jobs:
         
     - name: Lint with pylint
       run: |
-        pylint fib.py
+        pylint **/*.py
